--- a/ci/prow/cluster.yaml
+++ b/ci/prow/cluster.yaml
@@ -148,6 +148,7 @@ spec:
       serviceAccountName: "plank"
       containers:
       - name: plank
+        # Update plank utility_images versions in config.yaml when updating this version
         image: gcr.io/k8s-prow/plank:v20190311-a967141
         args:
         - --dry-run=false
