also hard code cluster zone in continuous runs

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -1594,6 +1594,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -1634,6 +1636,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: docker-graph
       emptyDir: {}
@@ -1676,6 +1680,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: docker-graph
       emptyDir: {}
@@ -1718,6 +1724,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: docker-graph
       emptyDir: {}
@@ -1754,6 +1762,8 @@ periodics:
         value: /etc/nightly-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: nightly-account
       secret:
@@ -1793,6 +1803,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -1835,6 +1847,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -1871,6 +1885,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -1903,6 +1919,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -1934,6 +1952,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -1966,6 +1986,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2000,6 +2022,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2054,6 +2078,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2094,6 +2120,8 @@ periodics:
         value: /etc/nightly-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: docker-graph
       emptyDir: {}
@@ -2135,6 +2163,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -2183,6 +2213,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -2220,6 +2252,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2280,6 +2314,8 @@ periodics:
         value: /etc/nightly-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: docker-graph
       emptyDir: {}
@@ -2336,6 +2372,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2390,6 +2428,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2424,6 +2464,8 @@ periodics:
         value: /etc/nightly-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: nightly-account
       secret:
@@ -2463,6 +2505,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -2505,6 +2549,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -2562,6 +2608,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2596,6 +2644,8 @@ periodics:
         value: /etc/nightly-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: nightly-account
       secret:
@@ -2635,6 +2685,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -2677,6 +2729,8 @@ periodics:
         value: /etc/release-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: hub-token
       secret:
@@ -2734,6 +2788,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2768,6 +2824,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
@@ -2822,6 +2880,8 @@ periodics:
         value: /etc/test-account/service-account.json
       - name: E2E_CLUSTER_REGION
         value: us-west1
+      - name: E2E_CLUSTER_ZONE
+        value: a
     volumes:
     - name: test-account
       secret:
