--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2659,28 +2659,28 @@ periodics:
       - "/flaky-test-reporter"
       args:
       - "--service-account /etc/test-account/service-account.json"
-      - "--github-account /etc/github-token/token"
-      - "--slack-account /etc/slack-token/token"
+      - "--github-account /etc/flaky-test-reporter-github-token/token"
+      - "--slack-account /etc/flaky-test-reporter-slack-token/token"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
         readOnly: true
-      - name: github-token
-        mountPath: /etc/github-token
+      - name: flaky-test-reporter-github-token
+        mountPath: /etc/flaky-test-reporter-github-token
         readOnly: true
-      - name: slack-token
-        mountPath: /etc/slack-token
+      - name: flaky-test-reporter-slack-token
+        mountPath: /etc/flaky-test-reporter-slack-token
         readOnly: true
     volumes:
     - name: test-account
       secret:
         secretName: test-account
-    - name: github-token
+    - name: flaky-test-reporter-github-token
       secret:
-        secretName: github-token
-    - name: slack-token
+        secretName: flaky-test-reporter-github-token
+    - name: flaky-test-reporter-slack-token
       secret:
-        secretName: slack-token
+        secretName: flaky-test-reporter-slack-token
 - cron: "15 9 * * *"
   name: ci-knative-backup-artifacts
   agent: kubernetes
