--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2744,9 +2744,9 @@ periodics:
       command:
       - "/flaky-test-reporter"
       args:
-      - "--service-account /etc/test-account/service-account.json"
-      - "--github-account /etc/flaky-test-reporter-github-token/token"
-      - "--slack-account /etc/flaky-test-reporter-slack-token/token"
+      - "--service-account=/etc/test-account/service-account.json"
+      - "--github-account=/etc/flaky-test-reporter-github-token/token"
+      - "--slack-account=/etc/flaky-test-reporter-slack-token/token"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
