Add client tests to presubmit

--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -44,6 +44,13 @@ presubmits:
       needs-dind: true
     - go-coverage: true
 
+  knative/client:
+    - build-tests: true
+    - unit-tests: true
+    - integration-tests: true
+    - go-coverage: true
+      go-coverage-threshold: 50
+
   knative/eventing:
     - build-tests: true
     - unit-tests: true
