Add knative/client to tide

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -53,6 +53,7 @@ tide:
   - repos:
     - knative/build
     - knative/build-templates
+    - knative/client
     - knative/observability
     - knative/serving
     - knative/eventing
