change code based on the CR comments

--- a/ci/prow/Makefile
+++ b/ci/prow/Makefile
@@ -18,12 +18,14 @@ ZONE          ?= us-central1-f
 JOB_NAMESPACE ?= test-pods
 
 PROW_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
+TESTGRID_DIR := $(PROW_DIR)/../testgrid
 
 get-cluster-credentials:
 	gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"
 
 config:
 	go run make_config.go --generate-testgrid-config=false --prow-config-output="config.yaml" config_knative.yaml
+	go run make_config.go --generate-prow-config=false --testgrid-config-output="$(TESTGRID_DIR)/config.yaml" config_knative.yaml
 
 update-config: get-cluster-credentials
 	kubectl create configmap config --from-file=config.yaml=config.yaml --dry-run -o yaml | kubectl replace configmap config -f -
@@ -41,9 +43,13 @@ update-cluster: get-cluster-credentials
 	kubectl apply -f cluster.yaml
 
 test:
-	@echo "*** Checking config generator"
+	@echo "*** Checking config generator for prow"
 	$(eval TMP_YAML := $(shell mktemp))
 	go run make_config.go --generate-testgrid-config=false config_knative.yaml > $(TMP_YAML)
 	diff config.yaml $(TMP_YAML)
+	@echo "*** Checking config generator for testgrid"
+	$(eval TMP_YAML := $(shell mktemp))
+	go run make_config.go --generate-prow-config=false config_knative.yaml > $(TMP_YAML)
+	diff $(TESTGRID_DIR)/config.yaml $(TMP_YAML)
 	@echo "*** Checking config validity"
 	bazel run @k8s//prow/cmd/checkconfig -- --plugin-config=$(PROW_DIR)/plugins.yaml --config-path=$(PROW_DIR)/config.yaml
