solve all the CR issues; recover the config.yaml file for testgrid

--- a/ci/prow/Makefile
+++ b/ci/prow/Makefile
@@ -21,11 +21,10 @@ PROW_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 TESTGRID_DIR := $(PROW_DIR)/../testgrid
 
 get-cluster-credentials:
-	gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"
+	gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"ßßß
 
 config:
-	go run make_config.go --generate-testgrid-config=false --prow-config-output="config.yaml" config_knative.yaml
-	go run make_config.go --generate-prow-config=false --testgrid-config-output="$(TESTGRID_DIR)/config.yaml" config_knative.yaml
+	go run make_config.go --prow-config-output="$(PROW_DIR)/config.yaml" --testgrid-config-output="$(TESTGRID_DIR)/config.yaml" config_knative.yaml
 
 update-config: get-cluster-credentials
 	kubectl create configmap config --from-file=config.yaml=config.yaml --dry-run -o yaml | kubectl replace configmap config -f -
@@ -43,13 +42,10 @@ update-cluster: get-cluster-credentials
 	kubectl apply -f cluster.yaml
 
 test:
-	@echo "*** Checking config generator for prow"
-	$(eval TMP_YAML := $(shell mktemp))
-	go run make_config.go --generate-testgrid-config=false config_knative.yaml > $(TMP_YAML)
-	diff config.yaml $(TMP_YAML)
-	@echo "*** Checking config generator for testgrid"
-	$(eval TMP_YAML := $(shell mktemp))
-	go run make_config.go --generate-prow-config=false config_knative.yaml > $(TMP_YAML)
-	diff $(TESTGRID_DIR)/config.yaml $(TMP_YAML)
+	@echo "*** Checking config generator for prow and testgrid"
+	$(eval TMP_YAML_PROW := $(shell mktemp)) $(eval TMP_YAML_TESTGRID := $(shell mktemp))
+	go run make_config.go --prow-config-output="$(TMP_YAML_PROW)" --testgrid-config-output="$(TMP_YAML_TESTGRID)" config_knative.yaml
+	diff config.yaml $(TMP_YAML_PROW)
+	diff $(TESTGRID_DIR)/config.yaml $(TMP_YAML_TESTGRID)
 	@echo "*** Checking config validity"
 	bazel run @k8s//prow/cmd/checkconfig -- --plugin-config=$(PROW_DIR)/plugins.yaml --config-path=$(PROW_DIR)/config.yaml
