--- a/ci/prow/Makefile
+++ b/ci/prow/Makefile
@@ -21,7 +21,7 @@ PROW_DIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 TESTGRID_DIR := $(PROW_DIR)/../testgrid
 
 get-cluster-credentials:
-	gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"ßßß
+	gcloud container clusters get-credentials "$(CLUSTER)" --project="$(PROJECT)" --zone="$(ZONE)"
 
 config:
 	go run make_config.go --prow-config-output="$(PROW_DIR)/config.yaml" --testgrid-config-output="$(TESTGRID_DIR)/config.yaml" config_knative.yaml
@@ -43,10 +43,10 @@ update-cluster: get-cluster-credentials
 
 test:
 	@echo "*** Checking config generator for prow and testgrid"
-	$(eval TMP_YAML_PROW := $(shell mktemp)) $(eval TMP_YAML_TESTGRID := $(shell mktemp))
+	$(eval TMP_YAML_PROW := $(shell mktemp))
+	$(eval TMP_YAML_TESTGRID := $(shell mktemp))
 	go run make_config.go --prow-config-output="$(TMP_YAML_PROW)" --testgrid-config-output="$(TMP_YAML_TESTGRID)" config_knative.yaml
 	diff config.yaml $(TMP_YAML_PROW)
-	# TODO(chizhg): this line needs to be commented before we replace the testgrid config file with the auto-generated one
-	# diff $(TESTGRID_DIR)/config.yaml $(TMP_YAML_TESTGRID)
+	diff $(TESTGRID_DIR)/config.yaml $(TMP_YAML_TESTGRID)
 	@echo "*** Checking config validity"
 	bazel run @k8s//prow/cmd/checkconfig -- --plugin-config=$(PROW_DIR)/plugins.yaml --config-path=$(PROW_DIR)/config.yaml
