Add the missing coverage job/tabs
This is a workaround for #615.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -2719,6 +2719,26 @@ periodics:
       - "--profile-name=coverage_profile.txt"
       - "--cov-target=."
       - "--cov-threshold-percentage=50"
+- cron: "0 1 * * *"
+  name: ci-knative-client-go-coverage
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: client
+    base_ref: master
+    clone_uri: "https://github.com/knative/client.git"
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/coverage:latest
+      imagePullPolicy: Always
+      command:
+      - "/coverage"
+      args:
+      - "--artifacts=$(ARTIFACTS)"
+      - "--profile-name=coverage_profile.txt"
+      - "--cov-target=."
+      - "--cov-threshold-percentage=50"
 - cron: "0 19 * * 1"
   name: ci-knative-cleanup
   agent: kubernetes
