--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -181,3 +181,6 @@ periodics:
   knative/caching:
     - continuous: true
       cron: "30 * * * *" # Run every hour and 30 minutes
+
+  knative/client:
+    - continuous: false
